static/style.css
@font-face {
	font-family: Inter;
	src: url('fonts/Inter-Regular.woff2');
	font-size: 13px;
}

html,
body {
	font-family: Inter, sans-serif;
	background: #021012;
}

.container {
	position: absolute;
	overflow: hidden;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	color: white;

	-webkit-animation: fadein 3s;
	   -moz-animation: fadein 3s;
	    -ms-animation: fadein 3s;
	     -o-animation: fadein 3s;
	        animation: fadein 3s;
}

.container-text {
	position: absolute;
  overflow: hidden;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	color: white;

	-webkit-animation: fadein 3s;
	   -moz-animation: fadein 3s;
	    -ms-animation: fadein 3s;
	     -o-animation: fadein 3s;
	        animation: fadein 3s;
}

@keyframes fadein {
	from { opacity: 0; }
	to   { opacity: 1; }
}

@-moz-keyframes fadein {
	from { opacity: 0; }
	to   { opacity: 1; }
}

@-webkit-keyframes fadein {
	from { opacity: 0; }
	to   { opacity: 1; }
}

.introduction {
	position: absolute;
	top: 50%;
	transform: translateY(-50%);
	width: 100%;
}

.content {
	position: absolute;
  font-size: 17px;
  top: 50%;
  left: 30%;
  right: 30%;
  width: 40%;
  line-height: 170%;
	transform: translateY(-50%);
}

.logo {
	width: 220px;
}

.footer {
	color: gray;
	bottom: 20px;
	position: absolute;
	width: 100%;
	text-align: center;
	margin-bottom: 20px;
}

.header {
	color: cyan;
	top: 20px;
	position: absolute;
	width: 100%;
	text-align: left;
	margin: 20px;
}

a {
	color: gray;
	margin: 0;
	transition: all 200ms;
	text-decoration: none;
}

a:hover {
	color: #021012;
	background: cyan;
}

.left {
	display: inline-block;
	margin-bottom: 30px;
	margin-left: 0;
	margin-right: 30px;
}

.right {
	display: inline-block;
}

.right a {
	display: inline-block;
	margin-right: 30px;
}

.noselect{
  -webkit-touch-callout:none;
  -webkit-user-select:none;
  -khtml-user-select:none;
  -moz-user-select:none;
  -ms-user-select:none;
  user-select:none
}

@media only screen and (max-width: 60em) {
	.left {
		display: block;
		margin-right: 0;
	}
	.right {
		display: block;
	}
	.right a:last-child {
		margin-right: 0;
	}
  
  .container-text {
    overflow-y: auto;
  }

	.content {
    top: 40%;
		left: 10%;
    bottom: 3%;
    font-size: 18px;
    line-height: 150%;
		width: 80%;
	}

  .logo {
    width: 180px;
  }
}

